# Peek-a-Pointer

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
tests/: CMakeLists.txt  inspectorTest.cxx
